[#97] FE | Checkout, Login, Register | Fixed UI bug where gradient background is too small.

--- a/frontend/src/app/components/checkout/checkout.component.scss
+++ b/frontend/src/app/components/checkout/checkout.component.scss
@@ -2,7 +2,7 @@
 /* # Divs: */
 #wrapper {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background: var(--gradient-rainbow);
 }
 
